[package]
name = "dragonos-dsc"
version = "0.0.1"
edition = "2021"
authors = ["longjin <longjin@DragonOS.org>"]
description = "DragonOS Raw Syscall Binding"
readme = "README.md"
license = "MIT"
repository = "https://github.com/DragonOS-Community/dsc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dsc"

[dependencies]
